2.77 hash 509270e Crash when Cycles Baking #47642

Closed
opened 2016-03-01 15:33:00 +01:00 by So3Datel · 7 comments

System Information
Windows 8.1 x64

Blender Version
Broken: 2.77 hash: 509270e

Short description of error
Simple scene. When I press Bake button, Blender crash without error messages.
Just press Bake button.
sorry for my English
277 Test.blend

**System Information** Windows 8.1 x64 **Blender Version** Broken: 2.77 hash: 509270e **Short description of error** Simple scene. When I press Bake button, Blender crash without error messages. Just press Bake button. sorry for my English [277 Test.blend](https://archive.blender.org/developer/F286518/277_Test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AxelMening-4

Added subscriber: @AxelMening-4
Author

2.77 RC1 hash: b594b25 Branch: HEAD works fine

2.77 RC1 hash: b594b25 Branch: HEAD works fine

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Hi, there was several bug fixes in between, official Blender 2.77 RC1 is hash: b594b25

https://developer.blender.org/rBb594b25dadce40d03d4a47470cedcadf6d0a0a76

Hi, there was several bug fixes in between, official Blender 2.77 RC1 is hash: b594b25 https://developer.blender.org/rBb594b25dadce40d03d4a47470cedcadf6d0a0a76

This issue was referenced by c32e8fb09f

This issue was referenced by c32e8fb09f08a5f9f8c8a261d864d32906140e29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47642
No description provided.