Fix T47642: Crash baking w/ cycles